--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ div{
     color: #707070;
 }
 .green{
-    background-color: #00eb00;
+    background-color: #008500;
     text-align: left;
     margin-right: 50px;
     border-top: 2px solid #ffffff;
