--- a/css/style.css
+++ b/css/style.css
@@ -44,15 +44,15 @@ div{
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px solid #ffffff;
-    border-left: 5px solid #ffffff;
+    border-bottom-width: 2px;
+    border-left-width: 5px;
 }
 .blue{
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-top: 2px solid #ffffff;
-    border-right: 5px solid #ffffff;
+    border-bottom-width: 2px;
+    border-right-width: 5px;
 }
 .blue p{
     color: #c4c4c4;
@@ -64,16 +64,16 @@ div{
     background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px solid #ffffff;
-    border-left: 5px solid #ffffff; 
+    border-bottom-width: 2px;
+    border-left-width: 5px;
     color: #707070;
 }
 .green{
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-top: 2px solid #ffffff;
-    border-right: 5px solid #ffffff;
+    border-bottom-width: 2px;
+    border-right-width: 5px;
 }
 footer{
     border: 5px solid #ffffff;
