--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,8 @@ body{
     font-family: 'Arial', "Verdana";
     color: #ffffff;
     background-color: #000000;
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin:20px 20px 0px 20px;
+    
 }
 h1{
     font-size: 42px;
@@ -44,15 +43,13 @@ div{
     background-color: #ff0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom-width: 2px;
-    border-left-width: 5px;
+    border-width: 0px 0px 2px 5px;
 }
 .blue{
     background-color: #0000ff;
     text-align: left;
     margin-right: 50px;
-    border-bottom-width: 2px;
-    border-right-width: 5px;
+    border-width: 2px 5px 0px 0px;
 }
 .blue p{
     color: #c4c4c4;
@@ -64,16 +61,14 @@ div{
     background-color: #ffff00;
     text-align: right;
     margin-left: 50px;
-    border-bottom-width: 2px;
-    border-left-width: 5px;
+    border-width: 0px 0px 2px 5px;
     color: #707070;
 }
 .green{
     background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-bottom-width: 2px;
-    border-right-width: 5px;
+    border-width: 2px 5px 0px 0px;
 }
 footer{
     border: 5px solid #ffffff;
